[GTK][WPE] Fetch tests assert in SubresourceLoader::didReceiveResponse() https://bugs.webkit.org/show_bug.cgi?id=188163

Patch by Rob Buis <rbuis@igalia.com> on 2018-08-05
Reviewed by Frédéric Wang.

Source/WebCore:

Fetch in manual redirect mode uses didReceiveResponse instead of
willSendRequestInternal, so update the ASSERT.

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::didReceiveResponse):

LayoutTests:

Unskip since this will not crash in Debug anymore.

* platform/wpe/TestExpectations:

Canonical link: https://commits.webkit.org/203436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234587 268f45cc-cd09-0410-ab3c-d52691b4dbfc